# adventofcode2021

./: .gitignore
rust/: Cargo.toml
rust/benches/: benches.rs
rust/src/: lib.rs  main.rs  util.rs
rust/src/days/: day1.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
