[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"
authors = ["Zengor <ialmeida@edu.unifor.br"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aoc2021"
path = "src/lib.rs"

[[bin]]
name = "aoc2021"
path = "src/main.rs"

[dependencies]
bitvec = "0.22.3"
itertools ="*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
